# multi-party-ecdsa

./: Cargo.toml
demo/: run_gg20.sh
examples/: gg20_keygen_client.rs  gg20_sign_client.rs  sm_manager.rs
libmpecdsa/: Cargo.toml
libmpecdsa/include/: libmpecdsa.h
libmpecdsa/src/: lib.rs  mpecdsa.rs
multi-party-ecdsa/: Cargo.toml
multi-party-ecdsa/examples/: gg20_keygen_client.rs  gg20_sign_client.rs
