[package]
name = "libmpecdsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mpecdsa"
path = "src/mpecdsa.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
multi-party-ecdsa = {path = "../multi-party-ecdsa"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2"
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.9"}
hex = "0.4"
libsecp256k1 = "0.3.2"


[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.6"
features = ["ec_secp256k1"]